# Lumenpulse

./: ANALYTICS_FINAL_CHECKLIST.md  ANALYTICS_PR_SUMMARY.md  BLOCKCHAIN_AUDIT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NOTIFICATIONS_IMPLEMENTATION.md  NOTIFICATIONS_QUICK_TEST.md  PR_DRAFT_add-crowdfund-kpis.md  README.md  TODO.md  TRANSACTION_DETAIL_FEATURE.md  VERIFICATION_CHECKLIST.md  WORKFLOW_CHECKLIST.md  WORKFLOW_FIXES.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_SUMMARY.md  WORKFLOW_VALIDATION.md  docker-compose.yml  fix-syntax.patch  git_diff.txt  git_diff2.txt  lumenpulse-grafana-dashboard.json  package-lock.json  package.json  pnpm-lock.yaml  prometheus-rules.yml  prometheus.yml  test-swagger-docs.sh  tsconfig.json
apps/backend/: .env.example  (+16 more)
apps/onchain/contracts/access_control/: Cargo.toml  Makefile  README.md
apps/onchain/contracts/access_control/src/: errors.rs  lib.rs  storage.rs  tests.rs
apps/onchain/contracts/cross_contract_reads/: Cargo.toml  README.md
apps/onchain/contracts/cross_contract_reads/src/: error.rs  generic.rs  lib.rs  token.rs  treasury.rs  yield_provider.rs
apps/onchain/contracts/lumen_token/: Cargo.toml
apps/onchain/contracts/lumen_token/src/: balance.rs  events.rs  lib.rs
apps/onchain/contracts/lumenpulse-curation/: Cargo.toml
apps/onchain/contracts/lumenpulse-curation/src/: events.rs  lib.rs
apps/onchain/contracts/project_registry/: Cargo.toml
apps/onchain/contracts/project_registry/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
apps/onchain/contracts/vesting-wallet/: Cargo.toml
apps/onchain/contracts/vesting-wallet/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  test_reentrancy.rs
apps/onchain/contracts/vesting-wallet/test_snapshots/test/: test_claim_before_start_time.1.json  test_claim_full_vesting.1.json  test_claim_multiple_times.1.json  test_claim_partial_vesting.1.json  test_claim_unauthorized.1.json  test_claim_waits_for_milestone_completion.1.json  test_create_vesting.1.json  test_create_vesting_with_milestone.1.json  test_get_available_amount_linear_calculation.1.json  test_get_claimable_consistency_with_claim.1.json  test_get_claimable_view_method.1.json  test_multiple_beneficiaries.1.json  test_update_vesting.1.json
document/: ARCHITECTURE.md  ASCANONICAL_ASSET_KEY_SCHEME.md  CONTRIBUTOR_SNAPSHOTS.md  INGESTION_MONITORING_RUNBOOK.md  LOCAL_SETUP.md  MANUAL_TEST_CASES.md  PR_CONTRIBUTOR_SNAPSHOTS.md  SMART_CONTRACTS.md  api-documentation-guide.md  contribution-flow.md  swagger-documentation-summary.md  swagger-implementation-guide.md  swagger-quick-reference.md
scripts/: contracts.config.ts  deploy.ts
soroban-contracts/: Cargo.toml
src/: index.ts
temp_backup/: backfill_contract_events.py
(+795 files in other folders)
