[package]
name = "cross_contract_reads"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared helpers for safe cross-contract view calls in the Lumenpulse onchain workspace."

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
