[package]
name = "vesting-wallet"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
